overflow fix 2

--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 4rem auto;
+    margin: 3rem auto;
 }
 
 @media screen and (min-width: 576px){
